Menu alignment issues

--- a/app/app.css
+++ b/app/app.css
@@ -14,11 +14,9 @@ body {
     float: right;
 }
 
-.button_text {
-    display: inline-block;
-    vertical-align: bottom;
-    line-height: normal;
-    margin-left: 5px;
+.icon {
+    vertical-align: text-top;
+    margin-right: 5px;
 }
 
 .nav-link, .dropdown-item {
